src/qt/libqwindow.bf

extension CQt
{
	[LinkName("QWindow_new")]
	public static extern void* QWindow_new();
	[LinkName("QWindow_new2")]
	public static extern void* QWindow_new2(void* parent);
	[LinkName("QWindow_new3")]
	public static extern void* QWindow_new3(void* screen);
	[LinkName("QWindow_MetaObject")]
	public static extern void* QWindow_MetaObject(void* c_this);
	[LinkName("QWindow_Metacast")]
	public static extern void* QWindow_Metacast(void* c_this, char8[] param1);
	[LinkName("QWindow_Metacall")]
	public static extern int32 QWindow_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QWindow_Tr")]
	public static extern libqt_string QWindow_Tr(char8[] s);
	[LinkName("QWindow_SetSurfaceType")]
	public static extern void QWindow_SetSurfaceType(void* c_this, int64 surfaceType);
	[LinkName("QWindow_SurfaceType")]
	public static extern int64 QWindow_SurfaceType(void* c_this);
	[LinkName("QWindow_IsVisible")]
	public static extern bool QWindow_IsVisible(void* c_this);
	[LinkName("QWindow_Visibility")]
	public static extern int64 QWindow_Visibility(void* c_this);
	[LinkName("QWindow_SetVisibility")]
	public static extern void QWindow_SetVisibility(void* c_this, int64 v);
	[LinkName("QWindow_Create")]
	public static extern void QWindow_Create(void* c_this);
	[LinkName("QWindow_WinId")]
	public static extern c_uintptr QWindow_WinId(void* c_this);
	[LinkName("QWindow_Parent")]
	public static extern void* QWindow_Parent(void* c_this);
	[LinkName("QWindow_SetParent")]
	public static extern void QWindow_SetParent(void* c_this, void* parent);
	[LinkName("QWindow_IsTopLevel")]
	public static extern bool QWindow_IsTopLevel(void* c_this);
	[LinkName("QWindow_IsModal")]
	public static extern bool QWindow_IsModal(void* c_this);
	[LinkName("QWindow_Modality")]
	public static extern int64 QWindow_Modality(void* c_this);
	[LinkName("QWindow_SetModality")]
	public static extern void QWindow_SetModality(void* c_this, int64 modality);
	[LinkName("QWindow_SetFormat")]
	public static extern void QWindow_SetFormat(void* c_this, void* format);
	[LinkName("QWindow_Format")]
	public static extern void QWindow_Format(void* c_this);
	[LinkName("QWindow_RequestedFormat")]
	public static extern void QWindow_RequestedFormat(void* c_this);
	[LinkName("QWindow_SetFlags")]
	public static extern void QWindow_SetFlags(void* c_this, int64 flags);
	[LinkName("QWindow_Flags")]
	public static extern int64 QWindow_Flags(void* c_this);
	[LinkName("QWindow_SetFlag")]
	public static extern void QWindow_SetFlag(void* c_this, int64 param1);
	[LinkName("QWindow_Type")]
	public static extern int64 QWindow_Type(void* c_this);
	[LinkName("QWindow_Title")]
	public static extern libqt_string QWindow_Title(void* c_this);
	[LinkName("QWindow_SetOpacity")]
	public static extern void QWindow_SetOpacity(void* c_this, double level);
	[LinkName("QWindow_Opacity")]
	public static extern double QWindow_Opacity(void* c_this);
	[LinkName("QWindow_SetMask")]
	public static extern void QWindow_SetMask(void* c_this, void* region);
	[LinkName("QWindow_Mask")]
	public static extern void QWindow_Mask(void* c_this);
	[LinkName("QWindow_IsActive")]
	public static extern bool QWindow_IsActive(void* c_this);
	[LinkName("QWindow_ReportContentOrientationChange")]
	public static extern void QWindow_ReportContentOrientationChange(void* c_this, int64 orientation);
	[LinkName("QWindow_ContentOrientation")]
	public static extern int64 QWindow_ContentOrientation(void* c_this);
	[LinkName("QWindow_DevicePixelRatio")]
	public static extern double QWindow_DevicePixelRatio(void* c_this);
	[LinkName("QWindow_WindowState")]
	public static extern int64 QWindow_WindowState(void* c_this);
	[LinkName("QWindow_WindowStates")]
	public static extern int64 QWindow_WindowStates(void* c_this);
	[LinkName("QWindow_SetWindowState")]
	public static extern void QWindow_SetWindowState(void* c_this, int64 state);
	[LinkName("QWindow_SetWindowStates")]
	public static extern void QWindow_SetWindowStates(void* c_this, int64 states);
	[LinkName("QWindow_SetTransientParent")]
	public static extern void QWindow_SetTransientParent(void* c_this, void* parent);
	[LinkName("QWindow_TransientParent")]
	public static extern void* QWindow_TransientParent(void* c_this);
	[LinkName("QWindow_IsAncestorOf")]
	public static extern bool QWindow_IsAncestorOf(void* c_this, void* child);
	[LinkName("QWindow_IsExposed")]
	public static extern bool QWindow_IsExposed(void* c_this);
	[LinkName("QWindow_MinimumWidth")]
	public static extern int32 QWindow_MinimumWidth(void* c_this);
	[LinkName("QWindow_MinimumHeight")]
	public static extern int32 QWindow_MinimumHeight(void* c_this);
	[LinkName("QWindow_MaximumWidth")]
	public static extern int32 QWindow_MaximumWidth(void* c_this);
	[LinkName("QWindow_MaximumHeight")]
	public static extern int32 QWindow_MaximumHeight(void* c_this);
	[LinkName("QWindow_MinimumSize")]
	public static extern void QWindow_MinimumSize(void* c_this);
	[LinkName("QWindow_MaximumSize")]
	public static extern void QWindow_MaximumSize(void* c_this);
	[LinkName("QWindow_BaseSize")]
	public static extern void QWindow_BaseSize(void* c_this);
	[LinkName("QWindow_SizeIncrement")]
	public static extern void QWindow_SizeIncrement(void* c_this);
	[LinkName("QWindow_SetMinimumSize")]
	public static extern void QWindow_SetMinimumSize(void* c_this, void* size);
	[LinkName("QWindow_SetMaximumSize")]
	public static extern void QWindow_SetMaximumSize(void* c_this, void* size);
	[LinkName("QWindow_SetBaseSize")]
	public static extern void QWindow_SetBaseSize(void* c_this, void* size);
	[LinkName("QWindow_SetSizeIncrement")]
	public static extern void QWindow_SetSizeIncrement(void* c_this, void* size);
	[LinkName("QWindow_Geometry")]
	public static extern void QWindow_Geometry(void* c_this);
	[LinkName("QWindow_FrameMargins")]
	public static extern void QWindow_FrameMargins(void* c_this);
	[LinkName("QWindow_FrameGeometry")]
	public static extern void QWindow_FrameGeometry(void* c_this);
	[LinkName("QWindow_FramePosition")]
	public static extern void QWindow_FramePosition(void* c_this);
	[LinkName("QWindow_SetFramePosition")]
	public static extern void QWindow_SetFramePosition(void* c_this, void* point);
	[LinkName("QWindow_Width")]
	public static extern int32 QWindow_Width(void* c_this);
	[LinkName("QWindow_Height")]
	public static extern int32 QWindow_Height(void* c_this);
	[LinkName("QWindow_X")]
	public static extern int32 QWindow_X(void* c_this);
	[LinkName("QWindow_Y")]
	public static extern int32 QWindow_Y(void* c_this);
	[LinkName("QWindow_Size")]
	public static extern void QWindow_Size(void* c_this);
	[LinkName("QWindow_Position")]
	public static extern void QWindow_Position(void* c_this);
	[LinkName("QWindow_SetPosition")]
	public static extern void QWindow_SetPosition(void* c_this, void* pt);
	[LinkName("QWindow_SetPosition2")]
	public static extern void QWindow_SetPosition2(void* c_this, int32 posx, int32 posy);
	[LinkName("QWindow_Resize")]
	public static extern void QWindow_Resize(void* c_this, void* newSize);
	[LinkName("QWindow_Resize2")]
	public static extern void QWindow_Resize2(void* c_this, int32 w, int32 h);
	[LinkName("QWindow_SetFilePath")]
	public static extern void QWindow_SetFilePath(void* c_this, libqt_string filePath);
	[LinkName("QWindow_FilePath")]
	public static extern libqt_string QWindow_FilePath(void* c_this);
	[LinkName("QWindow_SetIcon")]
	public static extern void QWindow_SetIcon(void* c_this, void* icon);
	[LinkName("QWindow_Icon")]
	public static extern void QWindow_Icon(void* c_this);
	[LinkName("QWindow_Destroy")]
	public static extern void QWindow_Destroy(void* c_this);
	[LinkName("QWindow_SetKeyboardGrabEnabled")]
	public static extern bool QWindow_SetKeyboardGrabEnabled(void* c_this, bool grab);
	[LinkName("QWindow_SetMouseGrabEnabled")]
	public static extern bool QWindow_SetMouseGrabEnabled(void* c_this, bool grab);
	[LinkName("QWindow_Screen")]
	public static extern void* QWindow_Screen(void* c_this);
	[LinkName("QWindow_SetScreen")]
	public static extern void QWindow_SetScreen(void* c_this, void* screen);
	[LinkName("QWindow_AccessibleRoot")]
	public static extern void* QWindow_AccessibleRoot(void* c_this);
	[LinkName("QWindow_FocusObject")]
	public static extern void* QWindow_FocusObject(void* c_this);
	[LinkName("QWindow_MapToGlobal")]
	public static extern void QWindow_MapToGlobal(void* c_this, void* pos);
	[LinkName("QWindow_MapFromGlobal")]
	public static extern void QWindow_MapFromGlobal(void* c_this, void* pos);
	[LinkName("QWindow_MapToGlobalWithPos")]
	public static extern void QWindow_MapToGlobalWithPos(void* c_this, void* pos);
	[LinkName("QWindow_MapFromGlobalWithPos")]
	public static extern void QWindow_MapFromGlobalWithPos(void* c_this, void* pos);
	[LinkName("QWindow_Cursor")]
	public static extern void QWindow_Cursor(void* c_this);
	[LinkName("QWindow_SetCursor")]
	public static extern void QWindow_SetCursor(void* c_this, void* cursor);
	[LinkName("QWindow_UnsetCursor")]
	public static extern void QWindow_UnsetCursor(void* c_this);
	[LinkName("QWindow_FromWinId")]
	public static extern void* QWindow_FromWinId(c_uintptr id);
	[LinkName("QWindow_ResolveInterface")]
	public static extern void* QWindow_ResolveInterface(void* c_this, char8[] name, int32 revision);
	[LinkName("QWindow_RequestActivate")]
	public static extern void QWindow_RequestActivate(void* c_this);
	[LinkName("QWindow_SetVisible")]
	public static extern void QWindow_SetVisible(void* c_this, bool visible);
	[LinkName("QWindow_Show")]
	public static extern void QWindow_Show(void* c_this);
	[LinkName("QWindow_Hide")]
	public static extern void QWindow_Hide(void* c_this);
	[LinkName("QWindow_ShowMinimized")]
	public static extern void QWindow_ShowMinimized(void* c_this);
	[LinkName("QWindow_ShowMaximized")]
	public static extern void QWindow_ShowMaximized(void* c_this);
	[LinkName("QWindow_ShowFullScreen")]
	public static extern void QWindow_ShowFullScreen(void* c_this);
	[LinkName("QWindow_ShowNormal")]
	public static extern void QWindow_ShowNormal(void* c_this);
	[LinkName("QWindow_Close")]
	public static extern bool QWindow_Close(void* c_this);
	[LinkName("QWindow_Raise")]
	public static extern void QWindow_Raise(void* c_this);
	[LinkName("QWindow_Lower")]
	public static extern void QWindow_Lower(void* c_this);
	[LinkName("QWindow_StartSystemResize")]
	public static extern bool QWindow_StartSystemResize(void* c_this, int64 edges);
	[LinkName("QWindow_StartSystemMove")]
	public static extern bool QWindow_StartSystemMove(void* c_this);
	[LinkName("QWindow_SetTitle")]
	public static extern void QWindow_SetTitle(void* c_this, libqt_string title);
	[LinkName("QWindow_SetX")]
	public static extern void QWindow_SetX(void* c_this, int32 arg);
	[LinkName("QWindow_SetY")]
	public static extern void QWindow_SetY(void* c_this, int32 arg);
	[LinkName("QWindow_SetWidth")]
	public static extern void QWindow_SetWidth(void* c_this, int32 arg);
	[LinkName("QWindow_SetHeight")]
	public static extern void QWindow_SetHeight(void* c_this, int32 arg);
	[LinkName("QWindow_SetGeometry")]
	public static extern void QWindow_SetGeometry(void* c_this, int32 posx, int32 posy, int32 w, int32 h);
	[LinkName("QWindow_SetGeometryWithRect")]
	public static extern void QWindow_SetGeometryWithRect(void* c_this, void* rect);
	[LinkName("QWindow_SetMinimumWidth")]
	public static extern void QWindow_SetMinimumWidth(void* c_this, int32 w);
	[LinkName("QWindow_SetMinimumHeight")]
	public static extern void QWindow_SetMinimumHeight(void* c_this, int32 h);
	[LinkName("QWindow_SetMaximumWidth")]
	public static extern void QWindow_SetMaximumWidth(void* c_this, int32 w);
	[LinkName("QWindow_SetMaximumHeight")]
	public static extern void QWindow_SetMaximumHeight(void* c_this, int32 h);
	[LinkName("QWindow_Alert")]
	public static extern void QWindow_Alert(void* c_this, int32 msec);
	[LinkName("QWindow_RequestUpdate")]
	public static extern void QWindow_RequestUpdate(void* c_this);
